[gd_scene load_steps=55 format=3 uid="uid://bad04yp2jw8kb"]

[ext_resource type="Script" uid="uid://dolssjcmr46wm" path="res://scripts/player.gd" id="1_cfq1j"]
[ext_resource type="Texture2D" uid="uid://b2dxlcj4vmwq5" path="res://others/recortes/player/counter/Slice 2.png" id="2_aj3i7"]
[ext_resource type="Texture2D" uid="uid://3wc3setaoop8" path="res://others/recortes/player/idle/Slice 9.png" id="2_rhk8g"]
[ext_resource type="Texture2D" uid="uid://c6wqurmgwv711" path="res://others/recortes/player/counter/Slice 3.png" id="3_u7j4d"]
[ext_resource type="Texture2D" uid="uid://bgd7uyt0yvr7t" path="res://others/recortes/player/idle/Slice 10.png" id="3_wpmsl"]
[ext_resource type="Texture2D" uid="uid://doeoscely5rep" path="res://others/recortes/player/idle/Slice 11.png" id="4_byjux"]
[ext_resource type="Texture2D" uid="uid://dt8qr5qrws1u8" path="res://others/recortes/player/counter/Slice 4.png" id="4_wqu1b"]
[ext_resource type="Texture2D" uid="uid://ck0hs3g6vs5vj" path="res://others/recortes/player/counter/Slice 5.png" id="5_4os38"]
[ext_resource type="Texture2D" uid="uid://7s23yxxfuj3e" path="res://others/recortes/player/idle/Slice 12.png" id="5_mea7i"]
[ext_resource type="Texture2D" uid="uid://d0kd3ad43kvfl" path="res://others/recortes/player/counter/Slice 6.png" id="6_7uku5"]
[ext_resource type="Texture2D" uid="uid://duf20wkug8y84" path="res://others/recortes/player/idle/Slice 13.png" id="6_en1ru"]
[ext_resource type="Texture2D" uid="uid://bygx2vk6b82vk" path="res://others/recortes/player/counter/Slice 7.png" id="7_3ilm3"]
[ext_resource type="Texture2D" uid="uid://vogyltcvx8qu" path="res://others/recortes/player/idle/Slice 14.png" id="7_arei5"]
[ext_resource type="Texture2D" uid="uid://dffl414223wj3" path="res://others/recortes/player/counter/Slice 8.png" id="8_77gjo"]
[ext_resource type="Texture2D" uid="uid://c0ilacrrt1gg3" path="res://others/recortes/player/idle/Slice 15.png" id="8_g7qy3"]
[ext_resource type="Texture2D" uid="uid://chufp5ip76buk" path="res://others/recortes/player/idle/Slice 16.png" id="9_cjy7x"]
[ext_resource type="Texture2D" uid="uid://f4302etdu2y3" path="res://others/Jotaro/jotaro_5000-0.png" id="9_rviga"]
[ext_resource type="Texture2D" uid="uid://xk8bfibu3fbv" path="res://others/recortes/player/idle/Slice 17.png" id="10_c572d"]
[ext_resource type="Texture2D" uid="uid://03olqllnbeic" path="res://others/recortes/player/idle/Slice 18.png" id="11_mwtv3"]
[ext_resource type="Texture2D" uid="uid://clq7ilyppwv4b" path="res://others/recortes/player/idle/Slice 19.png" id="12_bmoh8"]
[ext_resource type="Texture2D" uid="uid://dj13ebekyxa4g" path="res://others/recortes/player/idle/Slice 20.png" id="13_umicm"]
[ext_resource type="Texture2D" uid="uid://cpman1f8o6kjw" path="res://others/recortes/player/idle/Slice 21.png" id="14_c4rmt"]
[ext_resource type="Texture2D" uid="uid://5ramunc0npyx" path="res://others/recortes/player/idle/Slice 22.png" id="15_q7r71"]
[ext_resource type="Texture2D" uid="uid://bgarxecb73mud" path="res://others/recortes/player/idle/Slice 23.png" id="16_dvidb"]
[ext_resource type="Texture2D" uid="uid://blwhj7bw32pbf" path="res://others/recortes/player/idle/Slice 24.png" id="17_f56rd"]
[ext_resource type="Texture2D" uid="uid://bwvv1c85urofg" path="res://others/recortes/player/idle/Slice 25.png" id="18_q6g2p"]
[ext_resource type="Texture2D" uid="uid://c3kikn4mtiy2k" path="res://others/recortes/player/idle/Slice 26.png" id="19_jd40y"]
[ext_resource type="Texture2D" uid="uid://q8pum85vj6g" path="res://others/recortes/player/walking/Slice 27.png" id="20_q6g2p"]
[ext_resource type="Texture2D" uid="uid://v1qs7b7atjld" path="res://others/recortes/player/walking/Slice 28.png" id="21_jd40y"]
[ext_resource type="Texture2D" uid="uid://bxpmgelxltq7v" path="res://others/recortes/player/walking/Slice 29.png" id="22_3inf7"]
[ext_resource type="Texture2D" uid="uid://bpsi8qtwwxyrh" path="res://others/recortes/player/walking/Slice 30.png" id="23_pmnq2"]
[ext_resource type="Texture2D" uid="uid://gj2cfb53w6cl" path="res://others/recortes/player/walking/Slice 31.png" id="24_e7x2s"]
[ext_resource type="Texture2D" uid="uid://bnujqlpsmhsmq" path="res://others/recortes/player/walking/Slice 32.png" id="25_d44gf"]
[ext_resource type="Texture2D" uid="uid://bbqvadlgls6sg" path="res://others/recortes/player/walking/Slice 33.png" id="26_4bavy"]
[ext_resource type="Texture2D" uid="uid://cpv4gafasey74" path="res://others/recortes/player/walking/Slice 34.png" id="27_yq68r"]
[ext_resource type="Texture2D" uid="uid://b81n3us2jhnej" path="res://others/Jotaro/jotaro_41-1.png" id="28_0qx57"]
[ext_resource type="Texture2D" uid="uid://dyqvec16ryh2e" path="res://others/recortes/player/walking/Slice 35.png" id="28_uv5uv"]
[ext_resource type="Texture2D" uid="uid://b0fo1oort54ws" path="res://others/recortes/player/walking/Slice 36.png" id="29_053xu"]
[ext_resource type="Texture2D" uid="uid://br8yrfblfqcxb" path="res://others/Jotaro/jotaro_41-2.png" id="29_qe3mk"]
[ext_resource type="Texture2D" uid="uid://iq4j4epuxo41" path="res://others/recortes/player/walking/Slice 37.png" id="30_aj3i7"]
[ext_resource type="Texture2D" uid="uid://bsdn8pw82ivpn" path="res://others/recortes/player/walking/Slice 38.png" id="31_u7j4d"]
[ext_resource type="Texture2D" uid="uid://cystb6rb6hnf8" path="res://others/recortes/player/walking/Slice 39.png" id="32_wqu1b"]
[ext_resource type="Texture2D" uid="uid://cxdfj1nmp2suq" path="res://others/recortes/player/walking/Slice 40.png" id="33_4os38"]
[ext_resource type="Texture2D" uid="uid://ww8e7y48560s" path="res://others/recortes/player/walking/Slice 41.png" id="34_7uku5"]
[ext_resource type="Texture2D" uid="uid://bxsrytuq2a4v" path="res://others/recortes/player/walking/Slice 42.png" id="35_3ilm3"]
[ext_resource type="AudioStream" uid="uid://d0pqia7rx57fa" path="res://sounds/player/punch.ogg" id="46_3ilm3"]
[ext_resource type="AudioStream" uid="uid://bipkx2wwipeei" path="res://sounds/player/light_punch.ogg" id="47_77gjo"]
[ext_resource type="AudioStream" uid="uid://dvh4fi3pdnehs" path="res://sounds/player/heavy_punch.ogg" id="48_rviga"]
[ext_resource type="AudioStream" uid="uid://lgni4rf6jb7h" path="res://sounds/player/counter.ogg" id="49_0qx57"]
[ext_resource type="AudioStream" uid="uid://bla3uqekdrjyw" path="res://sounds/player/stand.ogg" id="50_qe3mk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pmnq2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_aj3i7")
}, {
"duration": 1.0,
"texture": ExtResource("3_u7j4d")
}, {
"duration": 1.0,
"texture": ExtResource("4_wqu1b")
}, {
"duration": 1.0,
"texture": ExtResource("5_4os38")
}, {
"duration": 1.0,
"texture": ExtResource("6_7uku5")
}, {
"duration": 1.0,
"texture": ExtResource("7_3ilm3")
}, {
"duration": 1.0,
"texture": ExtResource("8_77gjo")
}],
"loop": false,
"name": &"counter",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_rviga")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rhk8g")
}, {
"duration": 1.0,
"texture": ExtResource("3_wpmsl")
}, {
"duration": 1.0,
"texture": ExtResource("4_byjux")
}, {
"duration": 1.0,
"texture": ExtResource("5_mea7i")
}, {
"duration": 1.0,
"texture": ExtResource("6_en1ru")
}, {
"duration": 1.0,
"texture": ExtResource("7_arei5")
}, {
"duration": 1.0,
"texture": ExtResource("8_g7qy3")
}, {
"duration": 1.0,
"texture": ExtResource("9_cjy7x")
}, {
"duration": 1.0,
"texture": ExtResource("10_c572d")
}, {
"duration": 1.0,
"texture": ExtResource("11_mwtv3")
}, {
"duration": 1.0,
"texture": ExtResource("12_bmoh8")
}, {
"duration": 1.0,
"texture": ExtResource("13_umicm")
}, {
"duration": 1.0,
"texture": ExtResource("14_c4rmt")
}, {
"duration": 1.0,
"texture": ExtResource("15_q7r71")
}, {
"duration": 1.0,
"texture": ExtResource("16_dvidb")
}, {
"duration": 1.0,
"texture": ExtResource("17_f56rd")
}, {
"duration": 1.0,
"texture": ExtResource("18_q6g2p")
}, {
"duration": 1.0,
"texture": ExtResource("19_jd40y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_0qx57")
}, {
"duration": 1.0,
"texture": ExtResource("29_qe3mk")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_q6g2p")
}, {
"duration": 1.0,
"texture": ExtResource("21_jd40y")
}, {
"duration": 1.0,
"texture": ExtResource("22_3inf7")
}, {
"duration": 1.0,
"texture": ExtResource("23_pmnq2")
}, {
"duration": 1.0,
"texture": ExtResource("24_e7x2s")
}, {
"duration": 1.0,
"texture": ExtResource("25_d44gf")
}, {
"duration": 1.0,
"texture": ExtResource("26_4bavy")
}, {
"duration": 1.0,
"texture": ExtResource("27_yq68r")
}, {
"duration": 1.0,
"texture": ExtResource("28_uv5uv")
}, {
"duration": 1.0,
"texture": ExtResource("29_053xu")
}, {
"duration": 1.0,
"texture": ExtResource("30_aj3i7")
}, {
"duration": 1.0,
"texture": ExtResource("31_u7j4d")
}, {
"duration": 1.0,
"texture": ExtResource("32_wqu1b")
}, {
"duration": 1.0,
"texture": ExtResource("33_4os38")
}, {
"duration": 1.0,
"texture": ExtResource("34_7uku5")
}, {
"duration": 1.0,
"texture": ExtResource("35_3ilm3")
}],
"loop": true,
"name": &"walking",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfq1j"]
size = Vector2(14, 39)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pmnq2"]
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aj3i7"]
radius = 8.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_cfq1j")

[node name="Idle" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -3)
scale = Vector2(0.354106, 0.354106)
sprite_frames = SubResource("SpriteFrames_pmnq2")
animation = &"counter"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_cfq1j")

[node name="hitbox" type="Area2D" parent="." groups=["Player"]]
collision_layer = 2
collision_mask = 8

[node name="hitbox_shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_pmnq2")
debug_color = Color(0.808436, 0.413473, 0, 0.42)

[node name="DamageP" type="Area2D" parent="." groups=["light_attack"]]
process_mode = 4
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageP"]
position = Vector2(25, -9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_aj3i7")
debug_color = Color(0, 0.648457, 0.180153, 0.42)

[node name="punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("46_3ilm3")
volume_db = -15.0
playback_type = 1

[node name="light_punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("47_77gjo")
volume_db = -15.0
playback_type = 1

[node name="heavy_punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("48_rviga")
volume_db = -15.0
playback_type = 1

[node name="counter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("49_0qx57")
volume_db = -15.0
playback_type = 1

[node name="stand" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("50_qe3mk")
volume_db = -15.0
playback_type = 1

[connection signal="animation_finished" from="Idle" to="." method="_on_idle_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_shape_entered" from="hitbox" to="." method="_on_hitbox_area_shape_entered"]
